Fixed issue #2, showtimes no longer overflow.

--- a/movies/static/movies/style.css
+++ b/movies/static/movies/style.css
@@ -96,7 +96,9 @@ main .movie .figureAndShowtimes {
     height: 400px;
     position: relative;
     cursor: pointer;
+    overflow: hidden;
 }
+
 main .movie img {
     display: block;
     margin: 0 auto;
